--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^1.5.0",
-    "grand": "^1.1.0",
-    "pg-jobs": "^4.3.1"
+    "pg-jobs": "^4.3.1",
+    "uuid": "^2.0.1"
   }
 }
